# FloawBoard

./: .env.example  .gitignore  GEMINI.md  LICENSE  PROJECT_CONTEXT.md  README.md  TASKS.md  deploy_smtp_server.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/handlers/: board.rs  mod.rs  task.rs  tasklist.rs  user.rs
backend/src/models/: board.rs  mod.rs  task.rs  tasklist.rs  user.rs
frontend/: Dockerfile  jest.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/board/[id]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: api.ts  validation.test.ts  validation.ts
