[package]
name = "kanban-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Le framework web et l'asynchrone
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Sérialisation JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base de données (Postgres + TLS pour la prod)
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid" ] }

# Gestion du temps et des IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Gestion des variables d'environnement et logs
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9.2"